Sun Sep 27 00:34:31 2015  Zachary Scott  <zzak@ruby-lang.org>

        * lib/ostruct.rb: Move method definitions for getter/setter to be lazy
          Patch by @sferik in [GH-1033]: https://github.com/ruby/ruby/pull/1033

Fri Sep 25 10:07:25 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http.rb: removed unused variable. It's removed at r13648.
	  [fix GH-1022] Patch by @nkondratyev

Fri Sep 25 09:48:27 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: upgrade to minitest-5.8.1

Fri Sep 25 09:47:12 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* id_table.c: fix typo. [ci skip][fix GH-1031] Patch @davydovanton

Fri Sep 25 07:54:05 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/gdbm/test_gdbm.rb (TestGDBM#test_s_open_lock): skip
	  this test on AIX. The issue is the same as on Solaris.
	  [ruby-dev:47631]

Thu Sep 24 17:25:09 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (paren_args): fix separator token at `foo::bar()` in
	  ripper.

Thu Sep 24 00:00:17 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* complex.c: ruby/config.h must be included before math.h
	  because it defines _LARGE_FILES on AIX and _LARGE_FILES
	  must be defined before sys/types.h is included from math.h.
	  [Bug #11483]

Wed Sep 23 22:22:38 2015  Zachary Scott  <zzak@ruby-lang.org>

	* ext/openssl/ossl_pkcs12*: Remove svn commit id macro

Wed Sep 23 01:11:28 2015  Zachary Scott  <zzak@ruby-lang.org>

	* ext/openssl/*: Remove svn commit id macros to make sync easier

Tue Sep 22 04:20:01 2015  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/test_drb.rb: Run Rinda/DRb tests on localhost. [Fix GH-1027]
	  patch by voxik.

	* test/rinda/test_rinda.rb: ditto

Mon Sep 21 20:53:39 2015  tbpgr  <tbpgr@tbpgr.jp>

	* test/win32ole/test_win32ole_event.rb: fix typo.
	  swbemsink_avairable? => swbemsink_available?  [Fix GH-1025]

Sun Sep 20 10:07:35 2015  Anton Davydov  <antondavydov.o@gmail.com>

	* cont.c (rb_callcc): [DOC] append continuations example accros